[package]
name = "airbus-systems"
version = "0.1.0"
authors = ["David Walschots <davidwalschots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "a320"
crate-type = ["cdylib"]

[dependencies]
uom = "0.30.0"
rand = "0.8.0"
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
ntest = "0.7.2"