[package]
name = "a320_systems"
version = "0.1.0"
authors = ["David Walschots <davidwalschots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = "0.30.0"
systems = { path = "../systems" }
